--- a/templates/base.html
+++ b/templates/base.html
@@ -1,22 +1,24 @@
 {% load staticfiles %}
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>{% block title %}{% endblock title %}Site Name</title>
+<html>
+<head>
+    <title>{% block pagetitle%} 42 Coffee Cups Test Assignment {% endblock %}</title>
+    <meta http-equiv="X-UA-Compatible" content="chrome=IE7" />
+    <meta name="viewport" content="initial-scale=1.0, width=device-width"/>
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
-        <meta http-equiv="X-UA-Compatible" content="chrome=IE7" />
+    <link rel="stylesheet" href="{% static 'css/screen.css' %}" media="screen, projection"/>
+    {% block csslinks %} 
+    {% endblock %}
+</head>
 
-        <meta name="viewport" content="initial-scale=1.0, width=device-width"/>
-        <meta name="apple-mobile-web-app-capable" content="yes"/>
-        <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+<body>
+<h1>{% block title %}42 Coffee Cups Test Assignment{% endblock %}</h1>
 
-        <link rel="stylesheet" href="{% static 'css/screen.css' %}" media="screen, projection"/>
-
-        {% block extra_head %}{% endblock extra_head %}
-
-    </head>
-    <body id="{% block body_id %}{% endblock %}" class="{% block body_class %}{% endblock %}">
-        {% block content %}{% endblock content %}
-    </body>
+{% block content %}
+{% endblock %}
+</body>
 </html>
+
+
