ticket:1 added .venw to gitignore, sepatrated css from templates, made collectstatic

--- a/apps/hello/templates/hello/base.html
+++ b/apps/hello/templates/hello/base.html
@@ -1,7 +1,9 @@
 
+
 <!DOCTYPE html>
 <html>
 <head>
+	<!-- {% load staticfiles %} -->
     <title>{% block pagetitle%} 42 Coffee Cups Test Assignment {% endblock %}</title>
     {% block csslinks %} 
     {% endblock %}
