--- a/apps/hello/templates/hello/index.html
+++ b/apps/hello/templates/hello/index.html
@@ -3,28 +3,9 @@
 {% block pagetitle %} Main Page {% endblock %}
 
 {% block csslinks %} 
-    <style type="text/css">
-	    .left {
-	        float: left;
-	        width: 50%;
-	        padding: 10px;
-	    }
-
-	    .right {
-	        margin-left: 50%;
-	        border: 3px;
-	        padding: 10px;
-	    }
-
-	    pre
-	    {
-	        font-family: "Times New Roman";
-	        font-size: 16px;
-	        white-space: pre;
-	        margin: 1em 0px;    
-	    }    
-    </style>
+    <link rel="stylesheet" type="text/css" href="/static/hello/style.css">    
 {% endblock %}
+
 
 
 {% block content %}
