ticket:3 5 records test green

--- a/apps/hello/templates/hello/firstrequests.html
+++ b/apps/hello/templates/hello/firstrequests.html
@@ -16,7 +16,8 @@
             <p class="request_record">{{forloop.counter}}. {{r}}</p>
         {% endfor %}
     {% else %}
-        <p>No requests are available.</p>
+        <!-- impossible to achive this line so far as to get on this page an html request should be made -->
+        <p>No requests are available.</p> 
     {% endif %}
 
 {% endblock %}
