--- a/apps/hello/templates/hello/base.html
+++ b/apps/hello/templates/hello/base.html
@@ -3,6 +3,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	{% load staticfiles %}
 	<!-- {% load staticfiles %} -->
     <title>{% block pagetitle%} 42 Coffee Cups Test Assignment {% endblock %}</title>
     {% block csslinks %} 
